"Creating parent class to run GUI for error"