@@ -1,30 +1,6 @@
-import javafx.application.Application;
-import javafx.event.ActionEvent;
-import javafx.event.EventHandler;
-import javafx.scene.Scene;
-import javafx.scene.control.Button;
-import javafx.scene.layout.StackPane;
-import javafx.stage.Stage;
-
-public class App extends Application {
-
-    Button button;
+public class App {
+     // run with javac --module-path /lib --add-modules javafx.controls,javafx.fxml -d bin src/App.java
     public static void main(String[] args) {
-        launch(args);
-    }
-
-    @Override
-    public void start(Stage primaryStage) throws Exception {
-        primaryStage.setTitle("315 Project");
-        button = new Button();
-        button.setText("Click");
-
-        StackPane layout = new StackPane();
-        layout.getChildren().add(button);
-
-        Scene scene = new Scene(layout, 300, 300);
-        primaryStage.setScene(scene);
-        primaryStage.show();
-        //working?
+        GUI.launch(GUI.class, args);
     }
 }
